# ClawArena

./: .gitignore  .pre-commit-config.yaml  DIRECTORY_STRUCTURE.md  FINAL_SUMMARY.md  Makefile  QUICK_START.md  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
docs/: CURRENCY_TASK_SUMMARY.md  OPENCLAW_INTEGRATION.md  PERFORMANCE_REPORT.md  PROJECT_SUMMARY.md
scripts/: fix_tasks.py  run_email_tasks.py
src/clawarena/: __init__.py  __main__.py  cli.py
src/clawarena/adapters/: registry.py  registry_optimized.py
src/clawarena/adapters/builtin/: dummy.py  openclaw_adapter.py  openclaw_adapter_optimized.py  openclaw_adapter_v2.py  subprocess_adapter.py
src/clawarena/core/: agent.py  evaluator.py  result.py  scoring.py  task.py
src/clawarena/engine/: pricing.py  runner.py  sandbox.py
src/clawarena/evaluators/: __init__.py  composite.py  exact_match.py  llm_judge.py  rubric.py
src/clawarena/reporting/: leaderboard.py  table.py
src/clawarena/storage/: backend.py  json_store.py
src/clawarena/tasks/: loader.py  registry.py
src/clawarena/tasks/builtin/cascade/: data_pipeline.yaml  extract_and_email.yaml
src/clawarena/tasks/builtin/email/: compose_simple.yaml  reply_with_context.yaml  thread_summary_reply.yaml
src/clawarena/tasks/builtin/general/: algorithm_trace.yaml  base_conversion.yaml  cipher_decode.yaml  code_output_prediction.yaml  data_extraction.yaml  dependency_resolution.yaml  excel_array_formulas.yaml  excel_conditional_aggregation.yaml  excel_cross_sheet_reconciliation.yaml  excel_data_validation.yaml  excel_financial_model.yaml  excel_formula_chain.yaml  excel_pivot_table.yaml  excel_what_if_analysis.yaml  file_organizer.yaml  git_conflict_resolution.yaml  json_transform.yaml  logic_grid_puzzle.yaml  math_word_problem.yaml  regex_match.yaml  schedule_planner.yaml  sql_query_result.yaml  state_machine_trace.yaml
src/clawarena/tasks/builtin/summarization/: daily_standup.yaml  meeting_notes.yaml  multi_source.yaml
tasks/examples/: example_task.yaml
tasks/openclaw/: code_review.yaml  currency_analysis.yaml  document_summarization.yaml  email_composition.yaml
tests/: conftest.py
tests/debug/: debug_leaderboard.py  debug_run.py  debug_task_loading.py  debug_tasks.py
tests/openclaw/: final_demo.py  quick_demo.py  run_openclaw_test.py  simple_openclaw_test.py  test_all_tasks.py  test_complete_integration.py  test_currency_auto.py  test_currency_simple.py  test_currency_task.py  test_final_optimized.py  test_openclaw_integration.py  test_openclaw_main.py  test_optimized_adapter.py  test_optimized_tasks.py  test_real_openclaw.py  test_sample_tasks.py  test_single_task_detailed.py  test_solid_integration.py  test_summarization_task.py  test_task_creation.py  test_token_accuracy.py
tests/test_adapters/: test_dummy.py
tests/test_core/: test_agent.py  test_scoring.py  test_task.py
tests/test_engine/: test_runner.py
tests/test_evaluators/: test_evaluators.py
tests/test_tasks/: test_loader.py
