[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clawarena"
version = "0.1.0"
description = "An agent benchmarking arena for evaluating AI agent systems on real-world tasks"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "ClawArena Team" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
llm-judge = ["openai>=1.0", "anthropic>=0.30"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pylint>=3.2",
    "bandit[toml]>=1.7",
    "pre-commit>=3.7",
    "tox>=4.15",
    "build>=1.2",
    "twine>=5.1",
]

[project.scripts]
clawarena = "clawarena.cli:main"

[project.entry-points."clawarena.adapters"]
dummy = "clawarena.adapters.builtin.dummy:DummyAdapter"
subprocess = "clawarena.adapters.builtin.subprocess_adapter:SubprocessAdapter"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH", "RUF", "PTH", "ERA", "PL"]
ignore = ["PLR0913", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004", "S101", "ERA001"]

[tool.ruff.lint.isort]
known-first-party = ["clawarena"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pylint.main]
load-plugins = ["pylint.extensions.docparams"]
py-version = "3.11"
jobs = 0

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 8

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.hatch.build.targets.wheel]
packages = ["src/clawarena"]
